--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "buefy": "^0.9.4",
+    "cloudinary-vue": "^1.1.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
   },
